charts/app.yaml
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "task-1"
  #namespace: "project"
  labels:
    app: "test-app"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "test-app"
  template:
    metadata:
      labels:
        app: "test-app"
    spec:
      containers:
      - name: "demo-crm-1"
        image: "us-central1-docker.pkg.dev/task-1-375619/crm/nextjs-docker:latest"
        resources:
          requests:
              memory: "32Mi"
              cpu: "75m"
          limits:
            memory: "64Mi"
            cpu: "150m"
        # volumeMounts:
        #   - name: foo
        #     mountPath: "/etc/foo"
        #     readOnly: true
---
# apiVersion: "autoscaling/v2"
# kind: "HorizontalPodAutoscaler"
# metadata:
#   name: "task-app-hpa-u8wo"
#   namespace: "project"
#   labels:
#     app: "test-app"
# spec:
#   scaleTargetRef:
#     kind: "Deployment"
#     name: "task-app"
#     apiVersion: "apps/v1"
#   minReplicas: 1
#   maxReplicas: 5
#   metrics:
#   - type: "Resource"
#     resource:
#       name: "cpu"
#       target:
#         type: "Utilization"
#         averageUtilization: 80
