charts/app-service.yaml
# ---
# apiVersion: "v1"
# kind: "Namespace"
# metadata:
#   name: "project"
# ---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "app-service"
  # namespace: "project"
  labels:
    app: "test-app"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 3000
  selector:
    app: "test-app"
  type: ClusterIP
