charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crm-ingress
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: crm-dvir.ddns.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 80
      # - path: /.well-known/acme-challenge/2lyOSkVA7HG6WSMOLFXzC-qmgh8PzaOPZ9YACCiRVxI
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: app-service
      #       port:
      #         number: 80
  tls:
  - hosts:
    - crm-dvir.ddns.net
    secretName: my-secreat
